Added base modules

--- a/nx.json
+++ b/nx.json
@@ -29,6 +29,18 @@
   "projects": {
     "api": {
       "tags": []
+    },
+    "campaign": {
+      "tags": []
+    },
+    "contact": {
+      "tags": []
+    },
+    "payment": {
+      "tags": []
+    },
+    "podkrepi-types": {
+      "tags": []
     }
   }
 }
