--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve",
-    "build": "nx build",
-    "test": "nx test"
+    "dev": "yarn nx serve --watch",
+    "start": "yarn nx serve",
+    "build": "yarn nx build",
+    "test": "yarn nx test"
   },
   "private": true,
   "dependencies": {
