--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "private": true,
   "dependencies": {
+    "@mikro-orm/core": "^4.5.9",
+    "@mikro-orm/nestjs": "^4.3.0",
+    "@mikro-orm/postgresql": "^4.5.9",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
