--- a/db/conf.d/extended.conf
+++ b/db/conf.d/extended.conf
@@ -1,4 +1,4 @@
 shared_preload_libraries = 'pg_cron'
 
 # PG Cron https://github.com/citusdata/pg_cron
-cron.database_name = 'app'
+cron.database_name = 'postgres'
