--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@podkrepi-bg/db-orm": ["libs/db-orm/src/index.ts"],
+      "@podkrepi-bg/models": ["libs/models/src/index.ts"],
       "@podkrepi-bg/podkrepi-types": ["libs/podkrepi-types/src/index.ts"]
     }
   },
