Added prisma schema

--- a/.env
+++ b/.env
@@ -29,7 +29,8 @@ DB_PASS=postgrespass
 DB_PORT=5432
 DB_NAME=postgres
 
-DATABASE_URL=postgres://postgres:postgrespass@pg-db:5432/postgres?schema=api
+## Local prisma db url
+DATABASE_URL=postgres://postgres:postgrespass@localhost:5432/postgres?schema=api
 
 # Sentry.io
 SENTRY_DSN=https://e25f62860a394934878c2e21306a6b66@o540074.ingest.sentry.io/5657969
