--- a/package.json
+++ b/package.json
@@ -3,21 +3,20 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "yarn nx serve --watch",
+    "dev": "yarn nx run-many --target serve --watch --all --parallel",
     "start": "yarn nx serve",
     "build": "yarn nx build",
+    "build-all": "yarn nx run-many --target build --all --parallel",
     "test": "yarn nx run-many --target test --all",
     "format": "prettier --write apps/**/*.ts",
-    "generate-model": "yarn nx run models:prisma-gen-client"
+    "generate-model": "yarn prisma generate"
   },
   "private": true,
   "dependencies": {
-    "@mikro-orm/core": "^4.5.9",
-    "@mikro-orm/nestjs": "^4.3.0",
-    "@mikro-orm/postgresql": "^4.5.9",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@prisma/client": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0"
@@ -41,6 +40,7 @@
     "eslint-config-prettier": "8.1.0",
     "jest": "27.0.3",
     "prettier": "^2.3.1",
+    "prisma": "^3.0.2",
     "ts-jest": "27.0.3",
     "typescript": "~4.3.5"
   }
