--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,6 +20,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
+          cache: 'yarn'
       - run: yarn
 
       - name: Nrwl Nx # https://github.com/marketplace/actions/nrwl-nx
