--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-all": "yarn nx run-many --target build --all --parallel",
     "test": "yarn nx run-many --target test --all",
     "format": "prettier --write apps/**/*.ts",
+    "migrate": "yarn prisma migrate deploy",
     "generate-schema": "yarn prisma generate",
     "studio": "yarn prisma studio"
   },
