--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,8 @@ services:
   ## Postgres Development ##
   migrate-db:
     image: podkrepi-api
-    container_name: ${COMPOSE_PROJECT_NAME?}-api
-    restart: always
+    container_name: ${COMPOSE_PROJECT_NAME?}-migrate-db
+    restart: 'no'
     environment:
       DATABASE_URL: postgres://${DB_USER?}:${DB_PASS?}@${DB_HOST?}:${DB_PORT?}/${DB_NAME?}?schema=api
     command: 'yarn migrate'
