Added keycloak integration

--- a/.env
+++ b/.env
@@ -29,6 +29,14 @@ DB_NAME=postgres
 ## Local prisma db url
 DATABASE_URL=postgres://postgres:postgrespass@localhost:5432/postgres?schema=api
 
+
+## Keycloak ##
+##############
+KEYCLOAK_URL=https://keycloak-dev.podkrepi.bg/auth
+KEYCLOAK_REALM=webapp-dev
+KEYCLOAK_CLIENT_ID=jwt-headless
+KEYCLOAK_SECRET=
+
 # Sentry.io
 SENTRY_DSN=https://e25f62860a394934878c2e21306a6b66@o540074.ingest.sentry.io/5657969
 SENTRY_ORG=podkrepibg
