--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "nx": "12.9.0",
     "prettier": "^2.3.1",
     "prisma": "^3.0.2",
+    "ts-node": "^10.2.1",
     "ts-jest": "27.0.3",
     "typescript": "~4.3.5"
   }
