--- a/package.json
+++ b/package.json
@@ -56,5 +56,8 @@
     "ts-node": "^10.2.1",
     "ts-jest": "27.0.3",
     "typescript": "~4.3.5"
+  },
+  "prisma": {
+    "seed": "ts-node db/seed/index.ts"
   }
 }
