Added app exception filter for prisma

--- a/apps/api/tsconfig.app.json
+++ b/apps/api/tsconfig.app.json
@@ -5,6 +5,7 @@
     "module": "commonjs",
     "types": ["node"],
     "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "target": "es2015"
   },
   "exclude": ["**/*.spec.ts"],
