Added env vars to readme

--- a/.env
+++ b/.env
@@ -14,12 +14,10 @@ TARGET_ENV=development
 
 ## Services ##
 ##############
-
 API_PORT=5010
 
 ## Database ##
 ##############
-
 DB_HOST=pg-db
 DB_USER=postgres
 DB_PASS=postgrespass
@@ -29,7 +27,6 @@ DB_NAME=postgres
 ## Local prisma db url
 DATABASE_URL=postgres://postgres:postgrespass@localhost:5432/postgres?schema=api
 
-
 ## Keycloak ##
 ##############
 KEYCLOAK_URL=https://keycloak-dev.podkrepi.bg/auth
@@ -38,8 +35,8 @@ KEYCLOAK_CLIENT_ID=jwt-headless
 KEYCLOAK_SECRET=
 
 # Sentry.io
-SENTRY_DSN=https://e25f62860a394934878c2e21306a6b66@o540074.ingest.sentry.io/5657969
+SENTRY_DSN=https://58b71cdea21f45c0bcbe5c1b49317973@o540074.ingest.sentry.io/5707518
 SENTRY_ORG=podkrepibg
-SENTRY_PROJECT=app
+SENTRY_PROJECT=rest-api
 SENTRY_AUTH_TOKEN=
 SENTRY_SERVER_ROOT_DIR=/app
