--- a/.env
+++ b/.env
@@ -29,8 +29,8 @@ DATABASE_URL=postgres://postgres:postgrespass@localhost:5432/postgres?schema=api
 
 ## Keycloak ##
 ##############
-KEYCLOAK_URL=https://keycloak-dev.podkrepi.bg/auth
-KEYCLOAK_REALM=webapp-dev
+KEYCLOAK_URL=https://keycloak.podkrepi.bg/auth
+KEYCLOAK_REALM=webapp
 KEYCLOAK_CLIENT_ID=jwt-headless
 KEYCLOAK_SECRET=
 
