--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "studio": "yarn prisma studio"
   },
   "dependencies": {
+    "@nestjs/cli": "^8.1.1",
     "@nestjs/common": "^8.0.6",
     "@nestjs/config": "^1.0.1",
     "@nestjs/core": "^8.0.6",
