--- a/Dockerfile.migrations
+++ b/Dockerfile.migrations
@@ -1,13 +1,12 @@
 FROM node:16-alpine3.14 as base
 WORKDIR /app
 
-# COPY package.json yarn.lock .yarnrc ./
-RUN yarn add prisma
-
 # The @prisma/client package defines its own postinstall hook that's being
 # executed whenever the package is being installed. This hook invokes the
 # prisma generate command which in turn generates the Prisma Client code
 # into the default location `node_modules/.prisma/client`
-COPY schema.prisma migrations ./
+RUN yarn add prisma
+
+COPY schema.prisma migrations prisma/
 
 CMD yarn prisma migrate deploy
