--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -10,8 +10,8 @@ on:
       - '**.md'
 
 jobs:
-  build-docker-image:
-    name: Build docker image
+  build-api-docker-image:
+    name: Build API docker image
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -36,3 +36,30 @@ jobs:
           push: true
           target: production
           tags: ghcr.io/podkrepi-bg/api:${{ steps.vars.outputs.tag }}
+  
+  build-migrations-docker-image:
+    name: Build migrations docker image
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Login to GitHub Packages Docker Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: devops-podkrepi-bg
+          password: ${{ secrets.DEVOPS_PACKAGES_TOKEN }}
+
+      - name: Get tag
+        id: vars
+        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        env:
+          NODE_ENV: production
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+        with:
+          push: true
+          file: Dockerfile.migrations
+          tags: ghcr.io/podkrepi-bg/api/migrations:${{ steps.vars.outputs.tag }}
