added README for deployment of the API updated manifests

--- a/manifests/db-secret.yaml
+++ b/manifests/db-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 type: Opaque
 metadata:
-  name: db
-  namespace: podkrepi-api
+  name: db-api
+  namespace: podkrepibg
 data:
-  password: postgrespass
+  url: secreturl
