--- a/manifests/api-headless.yaml
+++ b/manifests/api-headless.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: api-headless
-  namespace: podkrepi-api
+  namespace: podkrepibg
 spec:
   selector:
     app: api-headless
@@ -11,13 +11,13 @@ spec:
   ports:
     - name: http
       port: 80
-      targetPort: 5010
+      targetPort: 80
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: api-headless
-  namespace: podkrepi-api
+  namespace: podkrepibg
   labels:
     app: api-headless
 spec:
@@ -32,20 +32,25 @@ spec:
     spec:
       initContainers:
         - name: migrate-database
-          image: ghcr.io/podkrepi-bg/api:v0.1.0
+          image: ghcr.io/podkrepi-bg/api/migrations:master
           env:
             - name: DATABASE_URL
-              value: postgresql://postgresql-headless.postgresql:5432/podkrepibg
-          args: ['yarn', 'migrate']
+              valueFrom:
+                secretKeyRef:
+                  name: db-api
+                  key: url
       containers:
         - name: api-headless
-          image: ghcr.io/podkrepi-bg/api:v0.1.0
+          image: ghcr.io/podkrepi-bg/api:master
           env:
             - name: PORT
-              value: 80
+              value: "80"
             - name: TARGET_APP
               value: api
             - name: DATABASE_URL
-              value: postgresql://postgresql-headless.postgresql:5432/podkrepibg
+              valueFrom:
+                secretKeyRef:
+                  name: db-api
+                  key: url
           ports:
             - containerPort: 80
