аdded: prisma db mock client for unit testing without db instance  - see city controler tests, they don't fail on database connection anymore  - done as per the singletone pattern as less intrusive - https://www.prisma.io/docs/guides/testing/unit-testing  - side effects - needed to add jest-extensions and compiler option strictNullChecks=true  - needed to fix some null return values

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@prisma/client": "^3.0.2",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "jest-mock-extended": "^2.0.2-beta2",
     "joi": "^17.4.2",
     "keycloak-connect": "^15.0.2",
     "nest-keycloak-connect": "^1.7.5",
