--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@prisma/client": "^3.0.2",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
-    "jest-mock-extended": "^2.0.2-beta2",
     "joi": "^17.4.2",
     "keycloak-connect": "^15.0.2",
     "nest-keycloak-connect": "^1.7.5",
@@ -35,8 +34,8 @@
     "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@nestjs/schematics": "^8.0.3",
-    "@nestjs/testing": "^8.0.6",
+    "@nestjs/schematics": "8.0.3",
+    "@nestjs/testing": "8.0.6",
     "@nrwl/cli": "12.9.0",
     "@nrwl/eslint-plugin-nx": "12.9.0",
     "@nrwl/jest": "12.9.0",
@@ -47,20 +46,21 @@
     "@nrwl/workspace": "12.9.0",
     "@types/jest": "27.0.1",
     "@types/node": "16.9.1",
-    "@typescript-eslint/eslint-plugin": "~4.28.3",
-    "@typescript-eslint/parser": "~4.28.3",
-    "eslint": "7.22.0",
-    "eslint-config-prettier": "8.1.0",
-    "husky": "^7.0.2",
-    "jest": "27.0.3",
-    "jest-extended": "^0.11.5",
-    "lint-staged": "^11.1.2",
+    "@typescript-eslint/eslint-plugin": "~4.31.2",
+    "@typescript-eslint/parser": "~4.31.2",
+    "eslint": "7.32.0",
+    "eslint-config-prettier": "8.3.0",
+    "husky": "7.0.2",
+    "jest": "27.2.1",
+    "jest-extended": "0.11.5",
+    "jest-mock-extended": "2.0.2-beta2",
+    "lint-staged": "11.1.2",
     "nx": "12.9.0",
-    "prettier": "^2.3.1",
-    "prisma": "^3.0.2",
-    "ts-jest": "27.0.3",
-    "ts-node": "^10.2.1",
-    "typescript": "~4.3.5"
+    "prettier": "2.4.1",
+    "prisma": "3.0.2",
+    "ts-jest": "27.0.5",
+    "ts-node": "10.2.1",
+    "typescript": "4.3.5"
   },
   "prisma": {
     "seed": "ts-node db/seed/index.ts"
