--- a/package.json
+++ b/package.json
@@ -16,22 +16,22 @@
     "studio": "yarn prisma studio"
   },
   "dependencies": {
-    "@nestjs/cli": "^8.1.1",
-    "@nestjs/common": "^8.0.6",
-    "@nestjs/config": "^1.0.1",
-    "@nestjs/core": "^8.0.6",
-    "@nestjs/platform-express": "^8.0.6",
-    "@nestjs/swagger": "^5.0.9",
-    "@prisma/client": "^3.0.2",
-    "class-transformer": "^0.4.0",
-    "class-validator": "^0.13.1",
-    "joi": "^17.4.2",
-    "keycloak-connect": "^15.0.2",
-    "nest-keycloak-connect": "^1.7.5",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "~7.3.0",
-    "swagger-ui-express": "^4.1.6",
-    "tslib": "^2.3.1"
+    "@nestjs/cli": "8.1.1",
+    "@nestjs/common": "8.0.6",
+    "@nestjs/config": "1.0.1",
+    "@nestjs/core": "8.0.6",
+    "@nestjs/platform-express": "8.0.6",
+    "@nestjs/swagger": "5.0.9",
+    "@prisma/client": "3.0.2",
+    "class-transformer": "0.4.0",
+    "class-validator": "0.13.1",
+    "joi": "17.4.2",
+    "keycloak-connect": "15.0.2",
+    "nest-keycloak-connect": "1.7.5",
+    "reflect-metadata": "0.1.13",
+    "rxjs": "7.3.0",
+    "swagger-ui-express": "4.1.6",
+    "tslib": "2.3.1"
   },
   "devDependencies": {
     "@nestjs/schematics": "8.0.3",
