added health check endpoint extended k8s manifests to use the health check

--- a/manifests/api-headless.yaml
+++ b/manifests/api-headless.yaml
@@ -56,3 +56,15 @@ spec:
                   key: url
           ports:
             - containerPort: 80
+          livenessProbe:
+            httpGet:
+              path: /api/health
+              port: 80
+            initialDelaySeconds: 10
+            periodSeconds: 5
+          readinessProbe:
+            httpGet:
+              path: /api/health
+              port: 80
+            initialDelaySeconds: 5
+            periodSeconds: 5
