--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nestjs/core": "8.0.6",
     "@nestjs/platform-express": "8.0.6",
     "@nestjs/swagger": "5.0.9",
+    "@nestjs/terminus": "^8.0.1",
     "@ntegral/nestjs-sentry": "3.0.6",
     "@prisma/client": "3.0.2",
     "@sentry/node": "6.13.1",
