--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@sentry/node": "6.13.1",
     "class-transformer": "0.4.0",
     "class-validator": "0.13.1",
-    "helmet": "^4.6.0",
+    "helmet": "4.6.0",
     "joi": "17.4.2",
     "keycloak-connect": "15.0.2",
     "nest-keycloak-connect": "1.7.5",
@@ -62,6 +62,7 @@
     "nx": "12.9.0",
     "prettier": "2.4.1",
     "prisma": "3.0.2",
+    "prisma-dbml-generator": "0.8.0",
     "ts-jest": "27.0.5",
     "ts-node": "10.2.1",
     "typescript": "4.3.5"
