--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,8 +22,9 @@ jobs:
           node-version: '16'
           cache: 'yarn'
       - run: yarn
-
-      - name: Nrwl Nx # https://github.com/marketplace/actions/nrwl-nx
+      - name: Generate Prisma DB client
+        run: yarn prisma generate
+      - name: NX Test API # https://github.com/marketplace/actions/nrwl-nx
         uses: MansaGroup/nrwl-nx-action@v2
         with:
           targets: lint,test,build
