forced set-value package resolution to v4.0.1 as prescribed by dependabot

--- a/package.json
+++ b/package.json
@@ -77,5 +77,8 @@
     "*.{ts,tsx,js,json}": [
       "nx format:write --uncommitted"
     ]
+  },
+  "resolutions": {
+    "set-value": "^4.0.1"
   }
 }
