--- a/manifests/api-headless.yaml
+++ b/manifests/api-headless.yaml
@@ -45,6 +45,8 @@ spec:
           image: ghcr.io/podkrepi-bg/api:master
           imagePullPolicy: Always
           env:
+            - name: NODE_ENV
+              value: production
             - name: PORT
               value: "80"
             - name: TARGET_APP
