--- a/manifests/prd/api-headless.yaml
+++ b/manifests/prd/api-headless.yaml
@@ -32,9 +32,11 @@ spec:
     spec:
       initContainers:
         - name: migrate-database
-          image: ghcr.io/podkrepi-bg/api/migrations:master
+          image: ghcr.io/podkrepi-bg/api/migrations:v0.1.0
           imagePullPolicy: Always
           env:
+            - name: NODE_ENV
+              value: production
             - name: DATABASE_URL
               valueFrom:
                 secretKeyRef:
@@ -42,7 +44,7 @@ spec:
                   key: url
       containers:
         - name: api-headless
-          image: ghcr.io/podkrepi-bg/api:master
+          image: ghcr.io/podkrepi-bg/api:v0.1.0
           imagePullPolicy: Always
           env:
             - name: NODE_ENV
