--- a/Dockerfile.migrations
+++ b/Dockerfile.migrations
@@ -1,12 +1,18 @@
 FROM node:16-alpine3.14 as base
 WORKDIR /app
 
+RUN apk add jq
+
 # The @prisma/client package defines its own postinstall hook that's being
 # executed whenever the package is being installed. This hook invokes the
 # prisma generate command which in turn generates the Prisma Client code
 # into the default location `node_modules/.prisma/client`
-RUN yarn add prisma
+RUN yarn add prisma ts-node typescript
 COPY schema.prisma .
 COPY migrations migrations/
+COPY db/seed db/seed/
 
-CMD yarn prisma db seed && yarn prisma migrate deploy
+RUN jq '. += {"prisma": {"seed": "ts-node db/seed/index.ts"}}' package.json > package.tmp.json
+RUN mv package.tmp.json package.json
+
+CMD yarn prisma migrate deploy && yarn prisma db seed
