--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -36,7 +36,7 @@ jobs:
           push: true
           target: production
           tags: ghcr.io/podkrepi-bg/api:${{ steps.vars.outputs.tag }}
-  
+
   build-migrations-docker-image:
     name: Build migrations docker image
     runs-on: ubuntu-latest
@@ -62,4 +62,6 @@ jobs:
         with:
           push: true
           file: Dockerfile.migrations
+          build-args: |
+            APP_VERSION=${{ steps.vars.outputs.tag }}
           tags: ghcr.io/podkrepi-bg/api/migrations:${{ steps.vars.outputs.tag }}
