make sure API container is build with APP_VERSION set

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -35,6 +35,8 @@ jobs:
         with:
           push: true
           target: production
+          build-args: |
+            APP_VERSION=${{ steps.vars.outputs.tag }}
           tags: ghcr.io/podkrepi-bg/api:${{ steps.vars.outputs.tag }}
 
   build-migrations-docker-image:
