--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/node": "16.9.1",
     "@typescript-eslint/eslint-plugin": "~4.31.2",
     "@typescript-eslint/parser": "~4.31.2",
+    "@vegardit/prisma-generator-nestjs-dto": "^1.4.0",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
     "husky": "7.0.2",
