--- a/apps/api/.eslintrc.json
+++ b/apps/api/.eslintrc.json
@@ -4,7 +4,9 @@
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
-      "rules": {}
+      "rules": {
+        "@typescript-eslint/no-empty-function": ["off"]
+      }
     },
     {
       "files": ["*.ts", "*.tsx"],
