--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@nestjs/swagger": "5.0.9",
     "@nestjs/terminus": "^8.0.1",
     "@ntegral/nestjs-sentry": "3.0.6",
-    "@prisma/client": "3.1.1",
+    "@prisma/client": "^3.2.1",
     "@sentry/node": "6.13.1",
     "class-transformer": "0.4.0",
     "class-validator": "0.13.1",
@@ -50,6 +50,7 @@
     "@nrwl/node": "12.9.0",
     "@nrwl/tao": "12.9.0",
     "@nrwl/workspace": "12.9.0",
+    "@types/faker": "^5.5.9",
     "@types/jest": "27.0.1",
     "@types/node": "16.9.1",
     "@typescript-eslint/eslint-plugin": "~4.31.2",
@@ -57,6 +58,7 @@
     "@vegardit/prisma-generator-nestjs-dto": "^1.4.0",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
+    "faker": "^5.5.3",
     "husky": "7.0.2",
     "jest": "27.2.1",
     "jest-extended": "0.11.5",
@@ -64,7 +66,7 @@
     "lint-staged": "11.1.2",
     "nx": "12.9.0",
     "prettier": "2.4.1",
-    "prisma": "3.1.1",
+    "prisma": "^3.2.1",
     "prisma-dbml-generator": "0.8.0",
     "ts-jest": "27.0.5",
     "ts-node": "10.2.1",
