--- a/manifests/prd/db-secret.yaml
+++ b/manifests/prd/db-secret.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 kind: Secret
 type: Opaque
@@ -6,3 +7,12 @@ metadata:
   namespace: podkrepibg
 data:
   url: secreturl
+---
+apiVersion: v1
+kind: Secret
+type: Opaque
+metadata:
+  name: keycloak-headless
+  namespace: podkrepibg
+data:
+  secret: secret-key
