Added keycloak config manifest

--- a/manifests/prd/api-headless.yaml
+++ b/manifests/prd/api-headless.yaml
@@ -56,6 +56,21 @@ spec:
                 secretKeyRef:
                   name: db-api
                   key: url
+            - name: KEYCLOAK_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: keycloak-headless
+                  key: url
+            - name: KEYCLOAK_REALM
+              valueFrom:
+                configMapKeyRef:
+                  name: keycloak-headless
+                  key: realm
+            - name: KEYCLOAK_CLIENT_ID
+              valueFrom:
+                configMapKeyRef:
+                  name: keycloak-headless
+                  key: client-id
             - name: KEYCLOAK_SECRET
               valueFrom:
                 secretKeyRef:
