Added keycloak manifests for dev

--- a/manifests/prd/keycloak-secret.yaml
+++ b/manifests/prd/keycloak-secret.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 type: Opaque
 metadata:
-  name: db-api
+  name: keycloak-headless
   namespace: podkrepibg
 data:
-  url: secreturl
+  secret: secret-key
