Added sample stripe env

--- a/.env
+++ b/.env
@@ -34,9 +34,13 @@ KEYCLOAK_REALM=webapp
 KEYCLOAK_CLIENT_ID=jwt-headless
 KEYCLOAK_SECRET=
 
-# Sentry.io
+## Sentry.io
 SENTRY_DSN=https://58b71cdea21f45c0bcbe5c1b49317973@o540074.ingest.sentry.io/5707518
 SENTRY_ORG=podkrepibg
 SENTRY_PROJECT=rest-api
 SENTRY_AUTH_TOKEN=
 SENTRY_SERVER_ROOT_DIR=/app
+
+## Stripe
+STRIPE_APIKEY=
+STRIPE_WEBHOOK_SECRET=
