--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "@nestjs/terminus": "^8.0.1",
     "@ntegral/nestjs-sentry": "3.0.6",
     "@prisma/client": "^3.2.1",
+    "@sendgrid/mail": "^7.5.0",
     "@sentry/node": "6.13.1",
     "class-transformer": "0.4.0",
     "class-validator": "0.13.1",
+    "handlebars": "^4.7.7",
     "helmet": "4.6.0",
     "joi": "17.4.2",
     "keycloak-connect": "15.0.2",
+    "mjml": "^4.10.4",
     "nest-keycloak-connect": "1.7.5",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.3.0",
