--- a/.env
+++ b/.env
@@ -40,3 +40,7 @@ SENTRY_ORG=podkrepibg
 SENTRY_PROJECT=rest-api
 SENTRY_AUTH_TOKEN=
 SENTRY_SERVER_ROOT_DIR=/app
+
+# Sendgrid
+SENDGRID_API_KEY=
+SENDGRID_SENDER_EMAIL=info@podkrepi.bg
