--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@ TARGET_ENV=development
 ## Services ##
 ##############
 API_PORT=5010
+APP_URL=https://dev.podkrepi.bg
 
 ## Database ##
 ##############
@@ -30,7 +31,7 @@ DATABASE_URL=postgres://postgres:postgrespass@localhost:5432/postgres?schema=api
 ## Keycloak ##
 ##############
 KEYCLOAK_URL=https://keycloak.podkrepi.bg/auth
-KEYCLOAK_REALM=webapp
+KEYCLOAK_REALM=webapp-dev
 KEYCLOAK_CLIENT_ID=jwt-headless
 KEYCLOAK_SECRET=
 
