--- a/.env
+++ b/.env
@@ -45,6 +45,7 @@ SENTRY_SERVER_ROOT_DIR=/app
 # Sendgrid
 SENDGRID_API_KEY=
 SENDGRID_SENDER_EMAIL=info@podkrepi.bg
+SENDGRID_INTERNAL_NOTIFICATIONS_EMAIL=info@podkrepi.bg
 
 ## Stripe
 STRIPE_SECRET_KEY=
