Added release version script

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "podkrepi-bg-api",
-  "version": "0.0.1",
+  "version": "0.1.2",
   "license": "MIT",
   "repository": "https://github.com/orgs/podkrepi-bg",
   "scripts": {
@@ -16,7 +16,9 @@
     "format": "nx format affected",
     "migrate": "yarn prisma migrate deploy",
     "generate-schema": "yarn prisma generate && yarn format",
-    "studio": "yarn prisma studio"
+    "studio": "yarn prisma studio",
+    "release": "./manifests/release.sh",
+    "release:patch": "./manifests/release.sh patch"
   },
   "dependencies": {
     "@golevelup/nestjs-stripe": "^0.2.2",
