--- a/manifests/dev/stripe-secret.yaml
+++ b/manifests/dev/stripe-secret.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 type: Opaque
 metadata:
-  name: stripe-headless
+  name: stripe-secret
   namespace: podkrepibg-dev
 data:
   apikey: secret-key
