--- a/manifests/prd/stripe-secret.yaml
+++ b/manifests/prd/stripe-secret.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 type: Opaque
 metadata:
-  name: stripe-headless
+  name: stripe-secret
   namespace: podkrepibg
 data:
   apikey: secret-key
