--- a/manifests/prd/keycloak-secret.yaml
+++ b/manifests/prd/keycloak-secret.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 type: Opaque
 metadata:
-  name: keycloak-headless
+  name: keycloak-secret
   namespace: podkrepibg
 data:
   secret: secret-key
