Fix typo in sendgrid config manifest

--- a/manifests/dev/api-headless.yaml
+++ b/manifests/dev/api-headless.yaml
@@ -35,6 +35,8 @@ spec:
           image: ghcr.io/podkrepi-bg/api/migrations:master
           imagePullPolicy: Always
           env:
+            - name: NODE_ENV
+              value: production
             - name: DATABASE_URL
               valueFrom:
                 secretKeyRef:
@@ -112,15 +114,15 @@ spec:
             - name: SENDGRID_SENDER_EMAIL
               valueFrom:
                 configMapKeyRef:
-                  name: stripe-config
+                  name: sendgrid-config
                   key: sender-email
             - name: SENDGRID_INTERNAL_NOTIFICATIONS_EMAIL
               valueFrom:
                 configMapKeyRef:
-                  name: stripe-config
+                  name: sendgrid-config
                   key: internal-notifications-email
             - name: SENDGRID_API_KEY
               valueFrom:
                 secretKeyRef:
-                  name: stripe-secret
+                  name: sendgrid-secret
                   key: apikey
