--- a/manifests/base/keycloak-config.yaml
+++ b/manifests/base/keycloak-config.yaml
@@ -2,8 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: keycloak-config
-  namespace: podkrepibg
 data:
   url: https://keycloak.podkrepi.bg/auth
-  realm: webapp
+  realm: webapp-dev
   client-id: jwt-headless
