--- a/manifests/base/sendgrid-config.yaml
+++ b/manifests/base/sendgrid-config.yaml
@@ -2,7 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: sendgrid-config
-  namespace: podkrepibg
 data:
   sender-email: info@podkrepi.bg
-  internal-notifications-email: info@podkrepi.bg
+  internal-notifications-email: qa@podkrepi.bg
