--- a/manifests/base/sendgrid-secret.yaml
+++ b/manifests/base/sendgrid-secret.yaml
@@ -3,8 +3,6 @@ apiVersion: v1
 kind: Secret
 type: Opaque
 metadata:
-  name: stripe-secret
-  namespace: podkrepibg-dev
+  name: sendgrid-secret
 data:
   apikey: secret-key
-  webhookSecret: secret-key
