--- a/manifests/overlays/development/kustomization.yaml
+++ b/manifests/overlays/development/kustomization.yaml
@@ -1,13 +1,16 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: podkrepibg
+namespace: podkrepibg-dev
+
+bases:
+  - "../../base"
 
 resources:
- - keycloak-config.yaml
  - keycloak-secret.local.yaml
- - sendgrid-config.yaml
  - sendgrid-secret.local.yaml
  - stripe-secret.local.yaml
- - sentry-config.yaml
- - api-headless.yaml
+
+patches:
+  - path: keycloak-config.patch.yaml
+  - path: api-headless.patch.yaml
