--- a/package.json
+++ b/package.json
@@ -21,31 +21,31 @@
     "release:patch": "./manifests/release.sh patch"
   },
   "dependencies": {
-    "@golevelup/nestjs-stripe": "^0.2.2",
-    "@golevelup/nestjs-webhooks": "^0.2.8",
-    "@keycloak/keycloak-admin-client": "^15.0.2",
-    "@nestjs/cli": "8.1.1",
-    "@nestjs/common": "8.0.6",
-    "@nestjs/config": "1.0.1",
-    "@nestjs/core": "8.0.6",
-    "@nestjs/platform-express": "8.0.6",
-    "@nestjs/swagger": "5.0.9",
-    "@nestjs/terminus": "^8.0.1",
+    "@golevelup/nestjs-stripe": "0.2.2",
+    "@golevelup/nestjs-webhooks": "0.2.8",
+    "@keycloak/keycloak-admin-client": "15.0.2",
+    "@nestjs/cli": "8.1.4",
+    "@nestjs/common": "8.1.2",
+    "@nestjs/config": "1.1.0",
+    "@nestjs/core": "8.1.2",
+    "@nestjs/platform-express": "8.1.2",
+    "@nestjs/swagger": "5.1.4",
+    "@nestjs/terminus": "8.0.1",
     "@ntegral/nestjs-sentry": "3.0.6",
-    "@prisma/client": "^3.3.0",
-    "@sendgrid/mail": "^7.5.0",
-    "@sentry/node": "6.13.1",
+    "@prisma/client": "3.4.1",
+    "@sendgrid/mail": "7.6.0",
+    "@sentry/node": "6.14.1",
     "class-transformer": "0.4.0",
     "class-validator": "0.13.1",
-    "handlebars": "^4.7.7",
+    "handlebars": "4.7.7",
     "helmet": "4.6.0",
     "joi": "17.4.2",
     "keycloak-connect": "15.0.2",
-    "mjml": "^4.10.4",
-    "nest-keycloak-connect": "1.7.5",
+    "mjml": "4.10.4",
+    "nest-keycloak-connect": "1.7.6",
     "reflect-metadata": "0.1.13",
-    "rxjs": "7.3.0",
-    "stripe": "^8.184.0",
+    "rxjs": "7.4.0",
+    "stripe": "8.186.1",
     "swagger-ui-express": "4.1.6",
     "tslib": "2.3.1"
   },
