Move image versions to k8s overlays

--- a/manifests/overlays/development/kustomization.yaml
+++ b/manifests/overlays/development/kustomization.yaml
@@ -14,3 +14,9 @@ resources:
 patches:
   - path: keycloak-config.patch.yaml
   - path: api-headless.patch.yaml
+
+images:
+  - name: ghcr.io/podkrepi-bg/api/migrations
+    newTag: master
+  - name: ghcr.io/podkrepi-bg/api
+    newTag: master
