--- a/manifests/base/api-headless.yaml
+++ b/manifests/base/api-headless.yaml
@@ -30,6 +30,7 @@ spec:
     spec:
       initContainers:
         - name: migrate-database
+          image: ghcr.io/podkrepi-bg/api/migrations
           imagePullPolicy: Always
           env:
             - name: NODE_ENV
@@ -41,6 +42,7 @@ spec:
                   key: url
       containers:
         - name: api-headless
+          image: ghcr.io/podkrepi-bg/api
           imagePullPolicy: Always
           resources:
             limits:
