--- a/manifests/overlays/development/api-headless.patch.yaml
+++ b/manifests/overlays/development/api-headless.patch.yaml
@@ -4,15 +4,16 @@ kind: Deployment
 metadata:
   name: api-headless
 spec:
+  selector:
+    matchLabels:
+      app: api-headless
   template:
     spec:
       initContainers:
         - name: migrate-database
-          image: ghcr.io/podkrepi-bg/api/migrations:master
           imagePullPolicy: Always
       containers:
         - name: api-headless
-          image: ghcr.io/podkrepi-bg/api:master
           imagePullPolicy: Always
           env:
             - name: APP_ENV
