Split k8s api-headless to service and deployment

--- a/manifests/base/kustomization.yaml
+++ b/manifests/base/kustomization.yaml
@@ -7,4 +7,5 @@ resources:
  - keycloak-config.yaml
  - sendgrid-config.yaml
  - sentry-config.yaml
- - api-headless.yaml
+ - service.yaml
+ - deployment.yaml
