--- a/manifests/overlays/development/kustomization.yaml
+++ b/manifests/overlays/development/kustomization.yaml
@@ -3,20 +3,18 @@ kind: Kustomization
 
 namespace: podkrepibg-dev
 
-bases:
-  - "../../base"
-
 resources:
- - keycloak-secret.local.yaml
- - sendgrid-secret.local.yaml
- - stripe-secret.local.yaml
+- keycloak-secret.local.yaml
+- sendgrid-secret.local.yaml
+- stripe-secret.local.yaml
+- ../../base
 
 patches:
-  - path: keycloak-config.patch.yaml
-  - path: deployment.patch.yaml
+- path: keycloak-config.patch.yaml
+- path: deployment.patch.yaml
 
 images:
-  - name: ghcr.io/podkrepi-bg/api/migrations
-    newTag: master
-  - name: ghcr.io/podkrepi-bg/api
-    newTag: master
+- name: ghcr.io/podkrepi-bg/api/migrations
+  newTag: master
+- name: ghcr.io/podkrepi-bg/api
+  newTag: master
