--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@nrwl/workspace": "12.9.0",
     "@types/faker": "^5.5.9",
     "@types/jest": "27.0.1",
+    "@types/mjml": "^4.7.0",
     "@types/node": "16.9.1",
     "@typescript-eslint/eslint-plugin": "~4.31.2",
     "@typescript-eslint/parser": "~4.31.2",
